# mousetweaks

./: Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  mousetweaks.1  mousetweaks.gresource.xml  mousetweaks.ui  org.gnome.mousetweaks.gschema.xml.in  window.ui
po/: POTFILES.in  en_GB.po  gd.po  pt.po
src/: Makefile.am  hover_click_window.c  main.c  mt-common.h  mt-ctw.c  mt-main.c  mt_application.c  mt_application.h  mt_click.c  mt_click.h  mt_hover_click.c  mt_hover_click.h  mt_listener.c  mt_listener.h  mt_listener_atspi.c  mt_listener_atspi.h  mt_secondary_click.c  mt_secondary_click.h  mt_timer.c  mt_timer.h
